--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@types/node": "^18.7.16",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "ethers": "^5.7.2"
   }
 }
