--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "web3": "^1.8.1"
   }
 }
