--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "start": "yarn build && node dist/index.js"
   },
   "devDependencies": {
+    "@typechain/ethers-v5": "^10.2.0",
     "@types/node": "^18.7.16",
     "dotenv": "^16.0.3",
     "ts-node": "^10.9.1",
+    "typechain": "^8.1.1",
     "typescript": "^4.8.3"
   },
   "dependencies": {
