--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "yarn build && node dist/index.js"
+    "start": "yarn build && node dist/index.js",
+    "typechain": "typechain --target ethers-v5 --out-dir types './abi/*.json'"
   },
   "devDependencies": {
     "@typechain/ethers-v5": "^10.2.0",
