--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "tsc",
     "start": "yarn build && node dist/index.js",
-    "typechain": "typechain --target ethers-v5 --out-dir types './abi/*.json'"
+    "typechain": "typechain --target ethers-v5 --out-dir ./src/types './abi/*.json'"
   },
   "devDependencies": {
     "@typechain/ethers-v5": "^10.2.0",
