--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es2016",
     "lib": ["es6"],
     "module": "commonjs",
+    "rootDir": "src",
     "resolveJsonModule": true,
     "allowJs": true,
     "outDir": "dist",
