--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
-    "ethers": "^5.7.2",
-    "web3": "^1.8.1"
+    "ethers": "^5.7.2"
   }
 }
